--- a/data/projects-card.json
+++ b/data/projects-card.json
@@ -12,6 +12,12 @@
   },
   {
     "id": "",
+    "category": ["branding","media"],
+    "src": "./img/projects/VIGIL-WINE-BRAND.jpg",
+    "link":"project-vigil-wine.html"
+  },
+  {
+    "id": "",
     "category": ["illustration", "media"],
     "src": "./img/projects/CORRALON AUSTRAL.jpg"
   },
@@ -58,7 +64,7 @@
   },
   {
     "id": "",
-    "category": ["media", "branding"],
+    "category": ["media"],
     "src": "./img/projects/CORRALON PATAGÓNICO.jpg"
   },
   {
@@ -74,7 +80,14 @@
   {
     "id": "",
     "category": ["media", "branding"],
-    "src": "./img/projects/FORTALEZA.jpg"
+    "src": "./img/projects/FORTALEZA.jpg",
+    "link":"project-fortaleza.html"
+  },
+  {
+    "id": "",
+    "category": ["media"],
+    "src": "./img/projects/FORTALEZA-NEW.jpg",
+    "link":"project-fortaleza.html"
   },
   {
     "id": "6",
@@ -103,7 +116,7 @@
     "src": "./img/projects/GALAXY GYM.jpg"
   },
   {
-    "id": "",
+    "id": "12",
     "category": ["branding"],
     "src": "./img/projects/ENPHOQUE.jpg"
   },
@@ -128,7 +141,7 @@
     "src": "./img/projects/CHRISTIAN.jpg"
   },
   {
-    "id": "",
+    "id": "11",
     "category": ["branding"],
     "src": "./img/projects/ARROBA CIENCIA.jpg"
   },
@@ -146,5 +159,10 @@
     "id": "5",
     "category": ["editorial"],
     "src": "./img/projects/PRELUDIO.jpg"
+  },
+  {
+    "id": "13",
+    "category": ["branding"],
+    "src": "./img/projects/tentacion_card.jpg"
   }
 ]
